[project]
name = "ratelimiters"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.34",
    "fastapi[all]>=0.136.3",
    "pytess>=1.0.0",
    "redis[hiredis]>=8.0.0",
    "requests>=2.34.2",
    "testcontainers[redis]>=4.14.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
