[project]
name = "leakybucket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.34",
    "fastapi[all]>=0.136.3",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "redis[hiredis]>=8.0.0",
    "testcontainers[redis]>=4.14.2",
]
